@@ -1,4 +1,4 @@
-Changelog started November 2006; Currently at version 0.6
+Changelog started November 2006; Currently at version 0.7
 
 Legend:
 --------------------------------------------------------------------------------
@@ -9,6 +9,13 @@ Legend:
  - Feature or option removal.
  % Development flag or note, such as branching.
 
+
+Pretty URLs 0.7                                                      ??
+================================================================================
+ + Base: Romanise Vietnamese, Croatian, Hiragana and Katakana. (Subs-PrettyUrls.php)
+ % Started the profiles package.
+ ! Base: Fixed a broken query in Subs-Post.php.
+ ! Base: URLs in <link> tags and feeds should be rewritten too. (QueryString.php, News.php)
 
 Pretty URLs 0.6                                                      May 2, 2007
 ================================================================================
